// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. does not render an image if display is not received 1`] = `""`;

exports[`2. does not render a primary image if ratio is not received 1`] = `""`;

exports[`3. does not render an inline image with no ratio and no caption or credits 1`] = `""`;

exports[`4. inline image with no ratio only shows caption and credits 1`] = `
<div>
  <figcaption>
    <div>
      <div>
        <div>
          Some caption
        </div>
        <div>
          SOME CREDIT
        </div>
      </div>
    </div>
  </figcaption>
</div>
`;

exports[`5. image with no caption 1`] = `
Array [
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img/someImage"
        />
      </div>
    </div>
  </div>,
  "",
]
`;

exports[`6. image with no display only shows given caption 1`] = `
<div>
  <div>
    <div>
      <div>
        Some caption
      </div>
    </div>
  </div>
</div>
`;

exports[`7. image with no display only shows given credits 1`] = `
<div>
  <div>
    <div>
      <div>
        SOME CREDIT
      </div>
    </div>
  </div>
</div>
`;

exports[`8. primary image renders with caption and credits 1`] = `
Array [
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img/someImage"
        />
      </div>
    </div>
  </div>,
  <div>
    <div>
      <div>
        <div>
          <div>
            Some caption
          </div>
          <div>
            SOME CREDIT
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`9. primary image with given resolutions 1`] = `
Array [
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img/someImage?resize=900"
        />
        <img
          alt=""
          src="https://img/someImage?resize=50"
        />
      </div>
    </div>
  </div>,
  <div>
    <div>
      <div>
        <div>
          <div>
            Some caption
          </div>
          <div>
            SOME CREDIT
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
